--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@ diff-match-patch==20241021; python_version >= '3.7'
 django==4.2.16; python_version >= '3.8'
 django-import-export==4.3.1; python_version >= '3.9'
 djangorestframework==3.15.2; python_version >= '3.8'
+drf-yasg==1.21.8; python_version >= '3.6'
+inflection==0.5.1; python_version >= '3.5'
+packaging==24.2; python_version >= '3.8'
 psycopg2==2.9.10; python_version >= '3.8'
+pytz==2024.2
+pyyaml==6.0.2; python_version >= '3.8'
 sqlparse==0.5.2; python_version >= '3.8'
 tablib==3.7.0; python_version >= '3.9'
+uritemplate==4.1.1; python_version >= '3.6'
