--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ djangorestframework = "*"
 psycopg2 = "*"
 django-import-export = "*"
 drf-yasg = "*"
+scikit-learn = "*"
+numpy = "*"
 
 [dev-packages]
 
